app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eshop-app-deployment
  namespace: eshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eshop-app
  template:
    metadata:
      labels:
        app: eshop-app
    spec:
      containers:
        - name: dotnet-app
          image: my-dotnet-app 
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
