db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: eshop
spec:
  selector:
    app: db
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
