service.yml
apiVersion: v1
kind: Service
metadata:
  name: eshop-service
  namespace: eshop
spec:
  selector:
    app: eshop-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
