ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eshop-app-ingress
  namespace: eshop
  annotations:
    traefik.ingress.kubernetes.io/rewrite-target: /
    traefik.ingress.kubernetes.io/secure: ""
spec:
  rules:
    - host: eshop.local 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eshop-service
                port:
                  number: 80
